--- a/B&R Interijeri/index.html
+++ b/B&R Interijeri/index.html
@@ -45,7 +45,7 @@
             <div class="home__data">
                 <h1 class="home__title"><span class="home__title-color">B&R</span><br> Interijeri</h1>
                 <h2> <span class="home__subtitle">Obrt za radove <br>suhe gradnje</span></h2>
-                <a href="#" class="button">Cijenik</a>
+                <a href="#home" class="button">Cijenik</a>
             </div>
 
             <div class="home__social">
@@ -86,54 +86,6 @@
                     <h2 class="skills__subtitle">Izvođenje radova</h2>
                     <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id
                         vero amet, alias architecto consectetur error eum eaque sit.</p>
-                    <!-- <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-html5 skills__icon'></i>
-                            <span class="skills__name">HTML5</span>
-                        </div>
-                        <div class="skills__bar skills__html">
-
-                        </div>
-                        <div>
-                            <span class="skills__percentage">95%</span>
-                        </div>
-                    </div>
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-css3 skills__icon'></i>
-                            <span class="skills__name">CSS3</span>
-                        </div>
-                        <div class="skills__bar skills__css">
-
-                        </div>
-                        <div>
-                            <span class="skills__percentage">85%</span>
-                        </div>
-                    </div>
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-javascript skills__icon'></i>
-                            <span class="skills__name">JAVASCRIPT</span>
-                        </div>
-                        <div class="skills__bar skills__js">
-
-                        </div>
-                        <div>
-                            <span class="skills__percentage">65%</span>
-                        </div>
-                    </div>
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxs-paint skills__icon'></i>
-                            <span class="skills__name">UX/UI</span>
-                        </div>
-                        <div class="skills__bar skills__ux">
-
-                        </div>
-                        <div>
-                            <span class="skills__percentage">85%</span>
-                        </div>
-                    </div> -->
 
                     <div class="skills__data">
                         <div class="skills__names">
