Update index.html, 4. puta

--- a/B&R Interijeri/index.html
+++ b/B&R Interijeri/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div>
                     <h2 class="about__subtitle">B&R Interijeri</h2>
-                    <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum
+                    <p class="about__text">Lorem, ipsum dolor sit amet alia consectetur adipisicing elit. Voluptate cum
                         expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo
                         recusandae cumque perferendis! Recusandae alias accusamus atque.</p>
                 </div>
