--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="home__img">
-                <img src="img/naslovna-3.png" alt="Marlon" class="home__blob-img">
+                <img src="/img/naslovna-3.png" alt="Marlon" class="home__blob-img">
             </div>
         </section>
 
@@ -65,7 +65,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="img/naslovna.png" alt="">
+                    <img src="/img/naslovna.png" alt="">
                 </div>
 
                 <div>
@@ -186,7 +186,7 @@
                 </div>
 
                 <div>
-                    <img src="img/work3.jpg" alt="" class="skills__img">
+                    <img src="/img/work3.jpg" alt="" class="skills__img">
                 </div>
             </div>
         </section>
@@ -197,22 +197,22 @@
 
             <div class="work__container bd-grid">
                 <a href="" class="work__img">
-                    <img src="img/work1.jpg" alt="">
+                    <img src="/img/work1.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="img/work2.jpg" alt="">
+                    <img src="/img/work2.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="img/work3.jpg" alt="">
+                    <img src="/img/work3.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="img/work4.jpg" alt="">
+                    <img src="/img/work4.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="img/work5.jpg" alt="">
+                    <img src="/img/work5.jpg" alt="">
                 </a>
                 <a href="" class="work__img">
-                    <img src="img/work6.jpg" alt="">
+                    <img src="/img/work6.jpg" alt="">
                 </a>
             </div>
         </section>
