--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </section>
 
     <!--===== FOOTER =====-->
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <p class="footer__title">B&R Interijeri</p>
         <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
