--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="home__img">
-                <img src="img/naslovna-3.jpg" alt="Marlon" class="home__blob-img">
+                <img src="img/radnik-naslovna-kompresirano.jpg" alt="Marlon" class="home__blob-img">
             </div>
         </section>
 
