--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="queries.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/queries.css">
 
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="home__img">
-                <img src="img/radnik-naslovna-kompresirano.jpg" alt="Marlon" class="home__blob-img">
+                <img src="/assets/img/radnik-naslovna-kompresirano.jpg" alt="Marlon" class="home__blob-img">
             </div>
         </section>
 
@@ -63,7 +63,7 @@
             <h2 class="section-title">O nama</h2>
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="img/naslovna.jpg" alt="">
+                    <img src="assets/img/naslovna.jpg" alt="">
                 </div>
                 <div>
                     <h2 class="about__subtitle">B&R Interijeri</h2>
@@ -111,12 +111,12 @@
         <section class="work section" id="work">
             <h2 class="section-title">Galerija</h2>
             <div class="work__container bd-grid">
-                <a href="#" class="work__img"><img src="img/work1.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="img/work2.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="img/work3.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="img/work4.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="img/work5.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="img/work6.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work1.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work2.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work3.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work4.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work5.jpg" alt=""></a>
+                <a href="#" class="work__img"><img src="/assets/img/work6.jpg" alt=""></a>
             </div>
         </section>
 
@@ -143,7 +143,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--===== MAIN JS =====-->
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
