--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li class="nav__item"><a href="#about" class="nav__link">O nama</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Radovi</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Galerija</a></li>
+                    <li class="nav__item"><a href="cijenik.html" class="nav__link">Cijenik</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Kontakt</a></li>
                 </ul>
             </div>
@@ -44,7 +45,7 @@
             <div class="home__data">
                 <h1 class="home__title"><span class="home__title-color">B&R</span><br> Interijeri</h1>
                 <h2><span class="home__subtitle">Obrt za radove <br>suhe gradnje</span></h2>
-                <a href="#home" class="button">Cijenik</a>
+                <a href="cijenik.html" class="button">Cijenik</a>
             </div>
 
             <div class="home__social">
@@ -120,30 +121,30 @@
             </div>
         </section>
 
-    <!--===== FOOTER =====-->
-    <footer class="footer" id="contact">
-        <p class="footer__title">B&R Interijeri</p>
-        <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bx-envelope'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bx-phone'></i></a>
-        </div>
-        <div class="footer__tel">
-            <p>tel: +385958138957</p>
-        </div>
-        <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
-    </footer>
+        <!--===== FOOTER =====-->
+        <footer class="footer" id="contact">
+            <p class="footer__title">B&R Interijeri</p>
+            <div class="footer__social">
+                <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
+                <a href="#" class="footer__icon"><i class='bx bx-envelope'></i></a>
+                <a href="#" class="footer__icon"><i class='bx bx-phone'></i></a>
+            </div>
+            <div class="footer__tel">
+                <p>tel: +385958138957</p>
+            </div>
+            <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
+        </footer>
 
-    <!-- ===== SCROLL TOP BUTTON ===== -->
-    <a href="#home" class="scroll-top" id="scroll-top">
-        <i class='bx bx-up-arrow-alt'></i>
-    </a>
+        <!-- ===== SCROLL TOP BUTTON ===== -->
+        <a href="#home" class="scroll-top" id="scroll-top">
+            <i class='bx bx-up-arrow-alt'></i>
+        </a>
 
-    <!--===== SCROLL REVEAL =====-->
-    <script src="https://unpkg.com/scrollreveal"></script>
+        <!--===== SCROLL REVEAL =====-->
+        <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!--===== MAIN JS =====-->
-    <script src="/js/script.js"></script>
+        <!--===== MAIN JS =====-->
+        <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
