Cijenik ubačen sa scrollRevialom i popravljen loga da vraća na home sa cijenika

--- a/cijenik.html
+++ b/cijenik.html
@@ -19,7 +19,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#home" class="nav__logo">B&R Interijeri</a>
+                <a href="index.html" class="nav__logo">B&R Interijeri</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
