dodani linkovi za face, tel, mail, grupiran cijenik

--- a/cijenik.html
+++ b/cijenik.html
@@ -41,10 +41,12 @@
 
     <main class="l-main">
         <!--===== CIJENIK =====-->
+
         <section class="pricing section bd-grid" id="pricing">
             <h2 class="section-title cijenik">Cijenik</h2>
-            <h3 class="cijene">Cijene radova do 3m²</h3>
+            <h3 class="cijene">Cijene radova</h3>
 
+            <h3 class="grupacije__cijena">Stropovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada spuštenog ravnog stropa do 10 cm bez vune</h3>
@@ -94,6 +96,8 @@
                     od <strong>27 €/m²</strong>
                 </div>
             </div>
+
+            <h3 class="grupacije__cijena">Oblaganje zidova</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Oblaganje zida s lijepljenjem gips-kartonskim pločama</h3>
@@ -119,6 +123,8 @@
                     od <strong>17 €/m²</strong>
                 </div>
             </div>
+
+            <h3 class="grupacije__cijena">Pregradni zidovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada pregradnog zida debljine 10 cm</h3>
@@ -144,6 +150,7 @@
                 </div>
             </div>
 
+            <h3 class="grupacije__cijena">Ostali radovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada L kutije do 20 cm</h3>
@@ -183,12 +190,13 @@
         <footer class="footer" id="contact">
             <p class="footer__title">B&R Interijeri</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bx-envelope'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bx-phone'></i></a>
+                <a href="https://www.facebook.com/p/BR-Interijeri-100083519222552/" target="_blank"
+                    class="footer__icon"><i class='bx bxl-facebook'></i></a>
+                <a href="mailto:brinterijeri2022@yahoo.com" class="footer__icon"><i class='bx bx-envelope'></i></a>
+                <a href="tel:+385998270154" class="footer__icon"><i class='bx bx-phone'></i></a>
             </div>
             <div class="footer__tel">
-                <p>tel: +385958138957</p>
+                <p>tel: +38595998270154</p>
             </div>
             <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
         </footer>
