--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
 
             <div class="home__social">
-                <a href="#" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bx-envelope'></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bx-phone'></i></a>
+                <a href="https://www.facebook.com/p/BR-Interijeri-100083519222552/" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
+                <a href="mailto:brinterijeri2022@yahoo.com" class="home__social-icon"><i class='bx bx-envelope'></i></a>
+                <a href="tel:+385998270154" class="home__social-icon"><i class='bx bx-phone'></i></a>
             </div>
 
             <div class="home__img">
@@ -96,6 +96,7 @@
                         <div class="skills__names"><span class="skills__name">OBLAGANJE ZIDOVA</span></div>
                         <div class="skills__bar skills__oz"></div>
                     </div>
+                    
                     <div class="skills__data">
                         <div class="skills__names"><span class="skills__name">OSTALI RADOVI SUHE GRADNJE</span></div>
                         <div class="skills__bar skills__orsg"></div>
@@ -125,12 +126,13 @@
         <footer class="footer" id="contact">
             <p class="footer__title">B&R Interijeri</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bx-envelope'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bx-phone'></i></a>
+                <a href="https://www.facebook.com/p/BR-Interijeri-100083519222552/" target="_blank"
+                    class="footer__icon"><i class='bx bxl-facebook'></i></a>
+                <a href="mailto:brinterijeri2022@yahoo.com" class="footer__icon"><i class='bx bx-envelope'></i></a>
+                <a href="tel:+385998270154" class="footer__icon"><i class='bx bx-phone'></i></a>
             </div>
             <div class="footer__tel">
-                <p>tel: +385958138957</p>
+                <p>tel: +38595998270154</p>
             </div>
             <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
         </footer>
