dodana hrcina slika na home

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="home__img">
-                <img src="/assets/img/radnik-naslovna-kompresirano.jpg" alt="Marlon" class="home__blob-img">
+                <img src="/assets/img/hrca.jpg" alt="Marlon" class="home__blob-img">
             </div>
         </section>
 
