ubačena galerija sa light-boxom

--- a/cijenik.html
+++ b/cijenik.html
@@ -27,8 +27,8 @@
                     <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="index.html#about" class="nav__link">O nama</a></li>
                     <li class="nav__item"><a href="index.html#skills" class="nav__link">Radovi</a></li>
-                    <li class="nav__item"><a href="index.html#work" class="nav__link">Galerija</a></li>
-                    <li class="nav__item"><a href="cijenik.html" class="nav__link active-link">Cijenik</a></li>
+                    <li class="nav__item"><a href="galerija.html" class="nav__link">Galerija</a></li>
+                    <li class="nav__item"><a href="cijenik.html" class="nav__link">Cijenik</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Kontakt</a></li>
                 </ul>
             </div>
