--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">O nama</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Radovi</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">Galerija</a></li>
+                    <li class="nav__item"><a href="galerija.html" class="nav__link">Galerija</a></li>
                     <li class="nav__item"><a href="cijenik.html" class="nav__link">Cijenik</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Kontakt</a></li>
                 </ul>
@@ -49,7 +49,8 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.facebook.com/p/BR-Interijeri-100083519222552/" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.facebook.com/p/BR-Interijeri-100083519222552/" class="home__social-icon"><i
+                        class='bx bxl-facebook'></i></a>
                 <a href="mailto:brinterijeri2022@yahoo.com" class="home__social-icon"><i class='bx bx-envelope'></i></a>
                 <a href="tel:+385998270154" class="home__social-icon"><i class='bx bx-phone'></i></a>
             </div>
@@ -96,7 +97,7 @@
                         <div class="skills__names"><span class="skills__name">OBLAGANJE ZIDOVA</span></div>
                         <div class="skills__bar skills__oz"></div>
                     </div>
-                    
+
                     <div class="skills__data">
                         <div class="skills__names"><span class="skills__name">OSTALI RADOVI SUHE GRADNJE</span></div>
                         <div class="skills__bar skills__orsg"></div>
@@ -110,7 +111,7 @@
         </section>
 
         <!--===== WORK =====-->
-        <section class="work section" id="work">
+        <!-- <section class="work section" id="work">
             <h2 class="section-title">Galerija</h2>
             <div class="work__container bd-grid">
                 <a href="#" class="work__img"><img src="/assets/img/work1.jpg" alt=""></a>
@@ -120,7 +121,7 @@
                 <a href="#" class="work__img"><img src="/assets/img/work5.jpg" alt=""></a>
                 <a href="#" class="work__img"><img src="/assets/img/work6.jpg" alt=""></a>
             </div>
-        </section>
+        </section> -->
 
         <!--===== FOOTER =====-->
         <footer class="footer" id="contact">
@@ -138,7 +139,7 @@
         </footer>
 
         <!-- ===== SCROLL TOP BUTTON ===== -->
-        <a href="#home" class="scroll-top" id="scroll-top">
+        <a href="#" class="scroll-top" id="scroll-top">
             <i class='bx bx-up-arrow-alt'></i>
         </a>
 
