--- a/galerija.html
+++ b/galerija.html
@@ -48,29 +48,29 @@
         <a href="/assets/img/slika-8-okomit.jpg">
           <img loading="lazy" src="/assets/img/slika-8-okomit.jpg" alt="lenon kapica">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>spušteni ravni strop</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-9-okomita.jpg">
           <img loading="lazy" src="/assets/img/slika-9-okomita.jpg" alt="salvador-dali">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Neki tamo profili</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-10-okomita.jpg">
           <img loading="lazy" src="/assets/img/slika-10-okomita.jpg" alt="robert-johnson">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Kamin</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-11-okomita.jpg">
           <img loading="lazy" src="/assets/img/slika-11-okomita.jpg" alt="kim-jong-un">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
 
       <div class="masonry-item">
@@ -78,86 +78,86 @@
           <img loading="lazy" src="/assets/img/slika-1.jpg" alt="lenon kapica">
         </a>
         <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <p>Ravnio stropovi bez vune</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-2.jpg">
-          <img loading="lazy" src="/assets/img/slika-2.jpg" alt="salvador-dali">
+          <img loading="lazy" src="/assets/img/slika-2.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-4.jpg">
-          <img loading="lazy" src="/assets/img/slika-4.jpg" alt="robert-johnson">
+          <img loading="lazy" src="/assets/img/slika-4.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Police</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-5.jpg">
-          <img loading="lazy" src="/assets/img/slika-5.jpg" alt="kim-jong-un">
+          <img loading="lazy" src="/assets/img/slika-5.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Police</p>
       </div>
 
       <div class="masonry-item">
         <a href="/assets/img/slika-6.jpg">
-          <img loading="lazy" src="/assets/img/slika-6.jpg" alt="lenon kapica">
+          <img loading="lazy" src="/assets/img/slika-6.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>spušteni ravni strop</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-7.jpg">
-          <img loading="lazy" src="/assets/img/slika-7.jpg" alt="salvador-dali">
+          <img loading="lazy" src="/assets/img/slika-7.jpg" alt="">
         </a>
         <h3>Oblaganje zidova</h3>
-        <p>Neki tamo profili</p>
+        <p>Kosi stropovi s vunom</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-12.jpg">
-          <img loading="lazy" src="/assets/img/slika-12.jpg" alt="robert-johnson">
+          <img loading="lazy" src="/assets/img/slika-12.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Kamin</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-13.jpg">
-          <img loading="lazy" src="/assets/img/slika-13.jpg" alt="kim-jong-un">
+          <img loading="lazy" src="/assets/img/slika-13.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Podovi</p>
       </div>
 
       <div class="masonry-item">
         <a href="/assets/img/slika-14.jpg">
-          <img loading="lazy" src="/assets/img/slika-14.jpg" alt="lenon kapica">
+          <img loading="lazy" src="/assets/img/slika-14.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>spušteni ravni strop</p>
+        <h3>Pregradni zidovi</h3>
+        <p>Pregradni zid debljine 10 cm</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-15.jpg">
-          <img loading="lazy" src="/assets/img/slika-15.jpg" alt="salvador-dali">
+          <img loading="lazy" src="/assets/img/slika-15.jpg" alt="">
         </a>
         <h3>Oblaganje zidova</h3>
-        <p>Neki tamo profili</p>
+        <p>Ravni stropovi bez vune</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-16.jpg">
-          <img loading="lazy" src="/assets/img/slika-16.jpg" alt="robert-johnson">
+          <img loading="lazy" src="/assets/img/slika-16.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <h3>Ostali radovi</h3>
+        <p>Podovi sa sistemom gipsanih ploča</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-17.jpg">
-          <img loading="lazy" src="/assets/img/slika-17.jpg" alt="kim-jong-un">
+          <img loading="lazy" src="/assets/img/slika-17.jpg" alt="">
         </a>
         <h3>Oblaganje zidova</h3>
-        <p>Izrada kosog stropa</p>
+        <p>Oblaganje zida bez vune</p>
       </div>
   </section>
 
