--- a/galerija.html
+++ b/galerija.html
@@ -77,8 +77,8 @@
         <a href="/assets/img/slika-1.jpg">
           <img loading="lazy" src="/assets/img/slika-1.jpg" alt="lenon kapica">
         </a>
-        <h3>Oblaganje zidova</h3>
-        <p>Ravnio stropovi bez vune</p>
+        <h3>Stropovi</h3>
+        <p>Ravni stropovi bez vune</p>
       </div>
       <div class="masonry-item">
         <a href="/assets/img/slika-2.jpg">
@@ -113,7 +113,7 @@
         <a href="/assets/img/slika-7.jpg">
           <img loading="lazy" src="/assets/img/slika-7.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
+        <h3>Stropovi</h3>
         <p>Kosi stropovi s vunom</p>
       </div>
       <div class="masonry-item">
