--- a/galerija.html
+++ b/galerija.html
@@ -142,7 +142,7 @@
         <a href="/assets/img/slika-15.jpg">
           <img loading="lazy" src="/assets/img/slika-15.jpg" alt="">
         </a>
-        <h3>Oblaganje zidova</h3>
+        <h3>Stropovi</h3>
         <p>Ravni stropovi bez vune</p>
       </div>
       <div class="masonry-item">
