a tagovi sa radova na cijene

--- a/cijenik.html
+++ b/cijenik.html
@@ -46,7 +46,7 @@
             <h2 class="section-title cijenik">Cijenik</h2>
             <h3 class="cijene">Cijene radova</h3>
 
-            <h3 class="grupacije__cijena">Stropovi</h3>
+            <h3 class="grupacije__cijena" id="spušteni-stropovi-c">Stropovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada spuštenog ravnog stropa do 10 cm bez vune</h3>
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <h3 class="grupacije__cijena">Oblaganje zidova</h3>
+            <h3 class="grupacije__cijena" id="oblaganje-zidova-c">Oblaganje zidova</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Oblaganje zida s lijepljenjem gips-kartonskim pločama</h3>
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <h3 class="grupacije__cijena">Pregradni zidovi</h3>
+            <h3 class="grupacije__cijena" id="pregradni-zidovi-c">Pregradni zidovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada pregradnog zida debljine 10 cm</h3>
@@ -150,7 +150,7 @@
                 </div>
             </div>
 
-            <h3 class="grupacije__cijena">Ostali radovi</h3>
+            <h3 class="grupacije__cijena" id="ostali-radovi-c">Ostali radovi</h3>
             <div class="pricing__item">
                 <div class="pricing__text">
                     <h3>Izrada L kutije do 20 cm</h3>
