--- a/index.html
+++ b/index.html
@@ -85,23 +85,32 @@
                     <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id
                         vero amet, alias architecto consectetur error eum eaque sit.</p>
 
-                    <div class="skills__data">
-                        <div class="skills__names"><span class="skills__name">PREGRADNI ZIDOVI</span></div>
-                        <div class="skills__bar skills__pz"></div>
-                    </div>
-                    <div class="skills__data">
-                        <div class="skills__names"><span class="skills__name">SPUŠTENI STROPOVI</span></div>
-                        <div class="skills__bar skills__ss"></div>
-                    </div>
-                    <div class="skills__data">
-                        <div class="skills__names"><span class="skills__name">OBLAGANJE ZIDOVA</span></div>
-                        <div class="skills__bar skills__oz"></div>
-                    </div>
+                    <a href="cijenik.html#pregradni-zidovi-c">
+                        <div class="skills__data">
+                            <div class="skills__names"><span class="skills__name">PREGRADNI ZIDOVI</span></div>
+                            <div class="skills__bar skills__pz"></div>
+                        </div>
+                    </a>
+                    <a href="cijenik.html#spušteni-stropovi-c">
+                        <div class="skills__data">
+                            <div class="skills__names"><span class="skills__name">SPUŠTENI STROPOVI</span></div>
+                            <div class="skills__bar skills__ss"></div>
+                        </div>
+                    </a>
+                    <a href="cijenik.html#oblaganje-zidova-c">
+                        <div class="skills__data">
+                            <div class="skills__names"><span class="skills__name">OBLAGANJE ZIDOVA</span></div>
+                            <div class="skills__bar skills__oz"></div>
+                        </div>
+                    </a>
 
-                    <div class="skills__data">
-                        <div class="skills__names"><span class="skills__name">OSTALI RADOVI SUHE GRADNJE</span></div>
-                        <div class="skills__bar skills__orsg"></div>
-                    </div>
+                    <a href="cijenik.html#ostali-radovi-c">
+                        <div class="skills__data">
+                            <div class="skills__names"><span class="skills__name">OSTALI RADOVI SUHE GRADNJE</span>
+                            </div>
+                            <div class="skills__bar skills__orsg"></div>
+                        </div>
+                    </a>
                 </div>
 
                 <div>
