Popravljena sekcija o nama točni podatci

--- a/index.html
+++ b/index.html
@@ -117,8 +117,19 @@
         <div>
           <h2 class="about__subtitle">B&R INTERIJERI d.o.o.</h2>
           <p class="about__text">Vlasnik: Hrvoje Rittinger <br>
-            Osnovano: 2024. godine <br>
-            OIB: 79522150755 | MB: 04611268 <br> <br>
+
+B & R INTERIJERI, obrt za suhu gradnju i usluge, vl. Hrvoje Rittinger, Privlaka, Faličevci 223 <br>
+OIB:
+84713054859 <br>
+MBS:
+98411390 <br>
+Datum osnivanja:
+09.05.2022. <br>
+
+NKD: 
+F43310 - Fasadni i štukaturski radovi <br>
+Registarsko tijelo:
+UPRAVNI ODJEL ZA GOSPODARSTVO, ODRŽIVI RAZVOJ I DEMOGRAFIJU OTOK (OTOK) <br>
 
             B&R INTERIJERI d.o.o. je mikro poduzetnik s privatnim vlasništvom od osnivanja. <br>
 
