--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
           <img src="assets/img/naslovna.jpg" alt="">
         </div> -->
         <div>
-          <h2 class="about__subtitle">B&R INTERIJERI d.o.o.</h2>
+          <h2 class="about__subtitle">B&R INTERIJERI</h2>
           <p class="about__text">Vlasnik: Hrvoje Rittinger <br>
 
-B & R INTERIJERI, obrt za suhu gradnju i usluge, vl. Hrvoje Rittinger, Privlaka, Faličevci 223 <br>
-OIB:
-84713054859 <br>
-MBS:
-98411390 <br>
-Datum osnivanja:
-09.05.2022. <br>
+            B & R INTERIJERI, obrt za suhu gradnju i usluge, vl. Hrvoje Rittinger, Privlaka, Faličevci 223 <br>
+            OIB:
+            84713054859 <br>
+            MBS:
+            98411390 <br>
+            Datum osnivanja:
+            09.05.2022. <br>
 
-NKD: 
-F43310 - Fasadni i štukaturski radovi <br>
-Registarsko tijelo:
-UPRAVNI ODJEL ZA GOSPODARSTVO, ODRŽIVI RAZVOJ I DEMOGRAFIJU OTOK (OTOK) <br>
+            NKD:
+            F43310 - Fasadni i štukaturski radovi <br>
+            Registarsko tijelo:
+            UPRAVNI ODJEL ZA GOSPODARSTVO, ODRŽIVI RAZVOJ I DEMOGRAFIJU OTOK (OTOK) <br>
 
             B&R INTERIJERI d.o.o. je mikro poduzetnik s privatnim vlasništvom od osnivanja. <br>
 
