ispravak doo u textu

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             Registarsko tijelo:
             UPRAVNI ODJEL ZA GOSPODARSTVO, ODRŽIVI RAZVOJ I DEMOGRAFIJU OTOK (OTOK) <br>
 
-            B&R INTERIJERI d.o.o. je mikro poduzetnik s privatnim vlasništvom od osnivanja. <br>
+            B&R INTERIJERI je mikro poduzetnik s privatnim vlasništvom od osnivanja. <br>
 
             Naša vizija je pružiti klijentima pouzdanost, kvalitetu i dugotrajna rješenja za uređenje prostora. Svaki
             projekt tretiramo s maksimalnom pažnjom i profesionalizmom, a cilj nam je stvoriti prostore koji su
