favicon i riješen web većinom

--- a/galerija.html
+++ b/galerija.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B&R Interijeri</title>
 
+  <!-- Google Search Console verifikacija -->
+  <meta name="google-site-verification" content="" />
+
+  <!-- Osnovni SEO meta tagovi -->
+  <meta name="description" content="br interijeri - Suha gradnja">
+  <meta name="keywords" content="br interijeri b&r interijeri, suha gradnja, spušteni stropovi, pregradni zidovi">
+  <meta name="author" content="br interijeri">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph za društvene mreže -->
+  <meta property="og:title" content="B&R Interijeri">
+  <meta property="og:description" content="Suha gradnja">
+  <meta property="og:type" content="website">
+  <!-- <meta property="og:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg">
+  <meta property="og:url" content="https://milaloncar-umjetnica.hr"> -->
+  <meta property="og:site_name" content="B&R Interijeri">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="B&R Interijeri - Suha gradnja">
+  <meta name="twitter:description" content="Suha gradnja, pregradni zidovi">
+  <!-- <meta name="twitter:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg"> -->
+
+  <!-- Favicon -->
+  <!-- <link rel="icon" type="image/x-icon" href="/favicon-mila5.ico">
+  <link rel="icon" type="image/png" href="/assets/images/android-chrome-192x192.png">
+  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png"> -->
+
+  <!--===== CSS =====-->
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/queries.css">
 
   <!-- =====BOX ICONS===== -->
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-  <title>B&R Interijeri</title>
+
 </head>
 
 <body>
