--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B&R Interijeri</title>
 
+  <!-- Google Search Console verifikacija -->
+  <meta name="google-site-verification" content="" />
+
+  <!-- Osnovni SEO meta tagovi -->
+  <meta name="description" content="br interijeri - Suha gradnja">
+  <meta name="keywords" content="br interijeri b&r interijeri, suha gradnja, spušteni stropovi, pregradni zidovi">
+  <meta name="author" content="br interijeri">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph za društvene mreže -->
+  <meta property="og:title" content="B&R Interijeri">
+  <meta property="og:description" content="Suha gradnja">
+  <meta property="og:type" content="website">
+  <!-- <meta property="og:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg">
+  <meta property="og:url" content="https://milaloncar-umjetnica.hr"> -->
+  <meta property="og:site_name" content="B&R Interijeri">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="B&R Interijeri - Suha gradnja">
+  <meta name="twitter:description" content="Suha gradnja, pregradni zidovi">
+  <!-- <meta name="twitter:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg"> -->
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/assets/img/android-chrome-192x192.png">
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
+
+  <!--===== CSS =====-->
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/queries.css">
 
   <!-- =====BOX ICONS===== -->
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-  <title>B&R Interijeri</title>
+
 </head>
 
 <body>
@@ -67,7 +97,6 @@
       <div class="skills__container bd-grid">
 
         <div>
-          <!-- <img src="assets/img/work3.jpg" alt="" class="skills__img"> -->
           <a href="cijenik.html#pregradni-zidovi-c">
             <div class="skills__data">
               <div class="skills__names"><span class="skills__name">PREGRADNI ZIDOVI</span></div>
@@ -111,14 +140,11 @@
     <section class="about section" id="about">
       <h2 class="section-title">O nama</h2>
       <div class="about__container bd-grid">
-        <!-- <div class="about__img">
-          <img src="assets/img/naslovna.jpg" alt="">
-        </div> -->
         <div>
           <h2 class="about__subtitle">B&R INTERIJERI</h2>
           <p class="about__text">Vlasnik: Hrvoje Rittinger <br>
 
-            B & R INTERIJERI, obrt za suhu gradnju i usluge, vl. Hrvoje Rittinger, Privlaka, Faličevci 223 <br>
+            B & R INTERIJERI, obrt za suhu gradnju i usluge, Privlaka, Faličevci 223 <br>
             OIB:
             84713054859 <br>
             MBS:
@@ -141,21 +167,6 @@
         </div>
       </div>
     </section>
-
-
-
-    <!--===== WORK =====-->
-    <!-- <section class="work section" id="work">
-            <h2 class="section-title">Galerija</h2>
-            <div class="work__container bd-grid">
-                <a href="#" class="work__img"><img src="/assets/img/work1.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="/assets/img/work2.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="/assets/img/work3.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="/assets/img/work4.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="/assets/img/work5.jpg" alt=""></a>
-                <a href="#" class="work__img"><img src="/assets/img/work6.jpg" alt=""></a>
-            </div>
-        </section> -->
 
     <!--===== FOOTER =====-->
     <footer class="footer" id="contact">
